# amiga-dev-kit

./: .flake8  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  index.html  license_header.txt  mnt_feather_wsl.sh  opensearch.xml  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: config.yml  documentation.md  documentation_issue.md  documentation_request.md
.github/workflows/: ci.yml  deploy.yml  format.yml  test-deploy.yml
assets/css/: styles.09ecbc9b.css  styles.35aef863.css  styles.375e3b01.css  styles.76dcacad.css  styles.921c6b63.css  styles.96e71b81.css  styles.af6c4cb8.css  styles.c29cff4a.css  styles.e453eac1.css
assets/js/: 0058b4c6.ab4972bb.js  0058b4c6.d4192b61.js  0058b4c6.d520a454.js  017af9a4.19e91f12.js  017af9a4.263d1eeb.js  017af9a4.5b8fe932.js  017af9a4.87af48d6.js  017af9a4.b35886c6.js  017af9a4.c3b1538a.js  017af9a4.c727baaa.js  017af9a4.c90d3b10.js  017af9a4.e1d4ae4f.js  017af9a4.eb4d838b.js  017af9a4.f5720c17.js  017af9a4.f76687ff.js  01a85c17.166cc3f8.js  01a85c17.1b29df97.js  01a85c17.324e2e2c.js  01a85c17.3741d80c.js  01a85c17.7e2d7499.js  01a85c17.9c21d88d.js  01a85c17.b3a5fc6d.js  01a85c17.e2f27eb2.js  02365777.06763c5b.js  02365777.0748c4ea.js  02365777.21885e89.js  02365777.2252063f.js  02365777.24964c02.js  02365777.3cc9fdf4.js  02365777.604e44fd.js  02365777.96b250b8.js  02365777.dd95ca4c.js  02365777.e480bf87.js  02e8e995.19662799.js  02e8e995.41c9ec83.js  02e8e995.78213f0b.js  02e8e995.80d57957.js  02e8e995.e5c8ea6f.js  037ab9b9.195ee04f.js  037ab9b9.eb2e5df3.js  (+2333 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/tags/: index.html
blog/tags/announcement/: index.html
blog/tags/release/: index.html
brain/: README.md  setup.cfg  setup.py
brain/examples/: README.md
brain/examples/camera_client/: README.md  main.py
brain/examples/camera_client_gui/: README.md  main.py  requirements.txt
brain/examples/camera_pipeline/: main.py
brain/examples/canbus_client/: main.py
brain/examples/file_reader/: README.md  main.py
brain/examples/hello/: entry.sh  main.py  sync.sh
brain/examples/kivy_viz/: README.md  main.py
brain/examples/oak/: README.md  main.py  requirements.txt
brain/farm_ng/: __init__.py
brain/farm_ng/core/: events_file_reader.py  events_file_writer.py
brain/farm_ng/oak/: __init__.py  client.py
brain/farm_ng_adk/: __init__.py
brain/farm_ng_adk/canbus/: canbus.proto
brain/farm_ng_adk/core/: event.proto  events_file_reader.py  events_file_writer.py  uri.py
brain/farm_ng_adk/oak/: client.py  oak.proto
brain/farm_ng_old/: __init__.py
brain/farm_ng_old/core/: event_pb2.pyi  events_file_reader.py  events_file_writer.py  uri.py
brain/farm_ng_old/oak/: oak.proto  oak_pb2.pyi
brain/lib/farm_ng/: __init__.py
brain/lib/farm_ng/oak/: oak.proto
brain/tests/: test_core.py  test_oak.py  test_package.py
circuitpy/: README.md
circuitpy/examples/: README.md
circuitpy/examples/FPV/: code.py
circuitpy/examples/bumpers/: README.md  adafruit_debouncer.mpy  code.py
circuitpy/examples/cansniffer/: code.py
circuitpy/examples/hbridge/: code.py
circuitpy/examples/hello_main_loop/: code.py
circuitpy/examples/rmd_servo/: code.py
circuitpy/examples/spacebar_estop/: code.py
circuitpy/examples/stepper_motor/: code.py
circuitpy/lib/farm_ng/: adk.py
circuitpy/regression/: adafruit_debouncer.py  adafruit_dotstar.py  adafruit_espatcontrol.py  adafruit_logging.py  analogio.py  board.py  busio.py  canio.py  digitalio.py  microcontroller.py  mocks.py  pwmio.py  supervisor.py  unit.py
docs/: index.html
docs/adk/: index.html
docs/amiga_quick_start/amiga-quick-start/: index.html
docs/api/: index.html
docs/apps/autoplot_app/: index.html
docs/apps/camera_app/: index.html
docs/apps/controller_app/: index.html
docs/apps/file_manager_app/: index.html
docs/apps/filter_app/: index.html
docs/apps/launcher/: index.html
docs/apps/recorder_app/: index.html
docs/brain/: README.md  index.html
docs/brain/app-ownership/: index.html
docs/brain/brain-apps/: index.html
docs/brain/brain-apps-kivy/: index.html
docs/brain/brain-apps-manifest/: index.html
docs/brain/brain-apps-old/: index.html
docs/brain/brain-install/: index.html
docs/brain/custom-troubleshooting/: index.html
docs/brain/next-steps/: index.html
docs/brain/ros-bridge/: index.html
docs/brain/sdk-barley-migration/: index.html
docs/concepts/: index.html
docs/concepts/amiga_service/: index.html
docs/concepts/canbus_service/: index.html
docs/concepts/controller_101/: index.html
docs/concepts/controller_service/: index.html
docs/concepts/filter_service/: index.html
docs/contribute/: index.html
docs/dashboard/: README.md  index.html
docs/debug_cable/: README.md  index.html
docs/examples/: index.html
docs/faq/: index.html
docs/getting-started/: index.html
docs/intro/: index.html
docs/mcu-kit/: index.html
docs/mcu_kit/: index.html
docs/microcontroller-kit/: index.html
docs/pendant/: index.html
docs/ssh/: index.html
docs/support/: index.html
docs/tags/: index.html
docs/what-is-adk/: index.html
emulator/: README.md
examples/: README.md
examples/FPV/: README.md  code.py
examples/cansniffer/: README.md  code.py
examples/hello_main_loop/: README.md  code.py
examples/oak/: README.md
feather_m4_can/uf2s/: adafruit-circuitpython-feather_m4_can-en_US-7.3.2.uf2
firmware/: dash-firm_22-08-24.uf2
lib/farm_ng/: __init__.py  adk.py
markdown-page/: index.html
search/: index.html
tests/: test_oak.py  test_package.py
website/: .gitignore  README.md  config.json  docusaurus.config.js  package-lock.json  package.json  pydoc-markdown.yml  requirements.txt  run_pydoc-markdown.sh  sidebars.js
website/blog/: 2022-07-08-version-001.md  2023-02-17-version-100.md  authors.yml
website/docs/: Amiga Hardware Documentation.md  adk.md  api.md  brain.md  contributing.md  dashboard.md  faq.md  getting-started.md  index.md  intro.md  mcu-kit.md  microcontroller-kit.md
(+356 files in other folders)
