[metadata]
name = farm_ng
version = attr: farm_ng.__version__
description = Amiga development kit for third party hardware or software extensions.
long_description = file: README.md
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/amiga-dev-kit
download_url = https://github.com/farm-ng/amiga-dev-kit
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    grpcio-tools

install_requires =
    protobuf<4.0dev
    grpcio

tests_require =
    pytest
    pytest-runner
    pytest-asyncio
test_suite = tests

package_dir=
    = lib

[options.extras_require]
dev =
    pytest==7.1.2
    pre-commit==2.20.0
    pydoc-markdown==4.6.3

[aliases]
test=pytest

[flake8]
max-line-length = 120
ignore =
    W503  # Ignore "Line break occurred before a binary operator"
    E203  # Ignore "whitespace before ':'"
exclude = .git,__pycache__,node_modules
