[metadata]
name = farm_ng_old
version = attr: farm_ng_old.__version__
description = Amiga development kit for third party hardware or software extensions.
long_description = file: README.md
author = Farm-ng Inc.
author_email = info@farm-ng.com
url = https://github.com/farm-ng/amiga-dev-kit
download_url = https://github.com/farm-ng/amiga-dev-kit
keywords = robotics, open-source
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development
    Framework :: Robot Framework

[options]
python_requires = >=3.6
setup_requires =
    wheel
    grpcio-tools

install_requires =
    protobuf<4.0dev
    grpcio
    opencv-python

tests_require =
    pytest
    pytest-runner
    pytest-asyncio
    pytest-mypy
test_suite = tests

packages =
    farm_ng_old
    farm_ng_old.oak

[options.extras_require]
dev =
    pytest==7.1.2
    pytest-asyncio==0.19.0
    pytest-mypy==0.9.1
    pre-commit==2.20.0
    pydoc-markdown==4.6.3
    mypy==0.971

[mypy]
files = tests, examples
ignore_missing_imports = True
